implemented default avatar and photo, fixed Register btns

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -97,6 +97,23 @@
   text-decoration: none;
 }
 
+.register-btn-selected {
+  font-size: 14px;
+  background-color: white;
+  color: $light-gray;
+  width: 100px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  filter: brightness(95%);
+  text-decoration: none;
+}
+
+.register-btn-selected:hover {
+  color: $orange;
+  transition-delay: s150ms;
+  text-decoration: none;
+}
+
 .interest-btn {
   font-size: 18px;
   background-color: transparent;
