--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -8,11 +8,7 @@
 
         <div class="card-index zoom d-flex">
           <div class="card-index-img">
-            <% if activity.photo_db.nil? %>
-              <%= cl_image_tag activity.photo_user, class: "card-index-img" %>
-            <% else %>
-              <%= image_tag activity.photo_db, class: "card-index-img" %>
-            <% end %>
+            <%= render 'shared/activity_photo', activity: activity %>
           </div>
 
           <div class="card-index-infos">
@@ -26,7 +22,7 @@
           </div>
 
             <div class="card-index-tags">
-              <div class="interest-index" data-activity-id="<%= activity.id %>" data-interest-id="<%= @user_interests.select{ |interest| interest.activity == activity } %>">
+              <div class="interest-index" data-activity-id="<%= activity.id %>" >
                 <% if activity.owner != current_user %>
                   <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
                     <%= link_to "♡", activity_interest_path(activity), method: :post, remote: true, class: "interest-btn" %>
@@ -36,8 +32,15 @@
                 <% end %>
               </div>
               <br>
-              <div class="card-btn-index" data-future-bookings-id="<%= activity.id %>">
-                <%= link_to "Register", activity_bookings_path(activity.id), method: :post, remote: true, class: 'btn register-btn' %>
+              <div class="card-btn-index" data-bookings-id="<%= activity.id %>">
+                <% if activity.owner != current_user %>
+                  <% booking = @user_registrations.select{ |booking| booking.activity == activity } %>
+                  <% if booking == [] %>
+                    <%= link_to "Register", activity_bookings_path(activity), method: :post, remote: true, class: "btn register-btn" %>
+                  <% else %>
+                    <%= link_to "Unregister", activity_booking_path(activity.id, booking.flatten), method: :delete, remote: true, class: "btn register-btn-selected" %>
+                  <% end %>
+                <% end %>
               </div>
             </div>
 
