--- a/app/views/shared/_card_index.html.erb
+++ b/app/views/shared/_card_index.html.erb
@@ -1,9 +1,5 @@
 <div class="card-dashboard-img">
-  <% if activity.photo_db.nil? %>
-    <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
-  <% else %>
-    <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
-  <% end %>
+  <%= render 'shared/activity_photo', activity: activity %>
 </div>
 <div class="card-index-infos">
   <div class="card-dashboard-text">
