--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,7 +8,7 @@ $green: #1EDD88;
 $gray: #0E0000;
 
 // COOLFIT COLORS
-$background-gray: #E5E5E5;
+$background-gray: #ececec;
 $light-gray: #C8C8C8;
 $gray: #636363;
 $dark-gray: #4C4C4C;
