--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,9 +3,9 @@
 }
 
 .show-container h3{
-    opacity: 0.7;
     font-family: $headers-font;
     margin-top: 5vh;
+    color: $dark-gray;
   }
 
 .darker-span{
