--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <%= render 'shared/navbar' unless in_authentication_page? %>
 
-    <div class="scroll-container">
+    <div class="scroll-container <%= in_authentication_page? ? 'full-height' : '' %>">
       <div class="<%= in_authentication_page? ? 'devise-background' : 'container mt-4 page-wrapper' %>">
         <%= yield %>
       </div>
