--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
           <% end %>
           <div class="card-landing-infos">
             <div class="card-landing-name">
-              <p><%= activity.name %></p>
+              <p><strong><%= activity.name %></strong></p>
             </div>
             <div class="d-flex justify-content-between">
               <div class="d-flex justify-content-start">
