--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -25,10 +25,15 @@
   text-align: start;
   padding-left: 15px;
   background-color: $dark-gray;
-  color: $light-gray;
+  color: white;
   border: none;
   border-radius: 25px;
   font-size: 16px;
   margin-top: 20px;
   outline: none;
+
+  &::placeholder {
+    color:$light-gray;
+  }
+
 }
