--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -4,89 +4,62 @@
 
   <div class="cards-index">
     <% @activities.each do |activity| %>
+      <div class="card-index zoom d-flex <%= (activity.max_capacity.nil?) || (activity.bookings.size < activity.max_capacity) ? 'available-capacity' : 'full-capacity'%>">
+        <div class="card-index-img">
+          <% if activity.photo_db.nil? %>
+            <%= cl_image_tag activity.photo_user, class: "card-index-img" %>
+          <% else %>
+            <%= image_tag activity.photo_db, class: "card-index-img" %>
+          <% end %>
+        </div>
 
-        <div class="card-index zoom d-flex <%= (activity.max_capacity.nil?) || (activity.bookings.size < activity.max_capacity) ? 'available-capacity' : 'full-capacity'%>">
-          <div class="card-index-img">
-            <% if activity.photo_db.nil? %>
-              <%= cl_image_tag activity.photo_user, class: "card-index-img" %>
-            <% else %>
-              <%= image_tag activity.photo_db, class: "card-index-img" %>
+
+        <div class="card-index-infos">
+          <div class="card-index-text">
+            <h3 class="card-index-title"><%= link_to activity.name, activity_path(activity) %></h3>
+            <p class="avatar-name">
+              <%= render 'shared/avatar_small', activity: activity, img_html: {style:"margin-bottom: 5vh;"} %><%= activity.owner.username %>
+            </p>
+            <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
+          </div>
+        </div>
+
+        <div class="card-index-tags">
+          <div class="interest-index" data-activity-id="<%= activity.id %>" data-interest-id="<%= @user_interests.select{ |interest| interest.activity == activity } %>">
+            <% if !current_user.professional %>
+              <% if activity.owner != current_user %>
+                <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
+                  <%= link_to "♡", activity_interest_path(activity), method: :post, remote: true, class: "interest-btn" %>
+                <% else %>
+                  <%= link_to "♥", activity_interest_path(activity), method: :delete, remote: true, class: "interest-btn-selected" %>
+                <% end %>
+              <% end %>
+            <%end %>
+          </div>
+
+          <br>
+
+          <div class="card-btn-index" data-future-bookings-id="<%= activity.id %>">
+            <% if !current_user.professional %>
+              <%= link_to "Register", activity_bookings_path(activity.id), method: :post, remote: true, class: 'btn register-btn' %>
             <% end %>
           </div>
 
-
-          <div class="card-index-infos">
-            <div class="card-index-text">
-              <h3 class="card-index-title"><%= link_to activity.name, activity_path(activity) %></h3>
-              <p class="avatar-name">
-                <%= render 'shared/avatar_small', activity: activity, img_html: {style:"margin-bottom: 5vh;"} %><%= activity.owner.username %>
-              </p>
-              <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
-            </div>
           </div>
 
-            <div class="card-index-tags">
-              <div class="interest-index" data-activity-id="<%= activity.id %>" data-interest-id="<%= @user_interests.select{ |interest| interest.activity == activity } %>">
-                <% if current_user.professional == false %>
-                  <% if activity.owner != current_user %>
-                    <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
-                      <%= link_to "♡", activity_interest_path(activity), method: :post, remote: true, class: "interest-btn" %>
-                    <% else %>
-                      <%= link_to "♥", activity_interest_path(activity), method: :delete, remote: true, class: "interest-btn-selected" %>
-                    <% end %>
-                  <% end %>
-                <%end %>
-              </div>
-              <br>
-              <div class="card-btn-index" data-future-bookings-id="<%= activity.id %>">
-                <% if current_user.professional == false %>
-                  <%= link_to "Register", activity_bookings_path(activity.id), method: :post, remote: true, class: 'btn register-btn' %>
-                <% end %>
-
-              <div class="card-index-infos">
-                <div class="card-index-text">
-                  <h3 class="card-index-title"><%= link_to activity.name, activity_path(activity) %></h3>
-                  <p class="avatar-name">
-                    <%= render 'shared/avatar_small', activity: activity, img_html: {style:"margin-bottom: 5vh;"} %><%= activity.owner.username %>
-                  </p>
-                  <p class="card-index-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
-                </div>
-
-              </div>
-
-                <div class="card-index-tags">
-                  <div class="interest-index" data-activity-id="<%= activity.id %>" data-interest-id="<%= @user_interests.select{ |interest| interest.activity == activity } %>">
-                    <% if activity.owner != current_user %>
-                      <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
-                        <%= link_to "♡", activity_interest_path(activity), method: :post, remote: true, class: "interest-btn" %>
-                      <% else %>
-                        <%= link_to "♥", activity_interest_path(activity), method: :delete, remote: true, class: "interest-btn-selected" %>
-                      <% end %>
-                    <% end %>
-                  </div>
-                  <br>
-                  <div class="card-btn-index" data-future-bookings-id="<%= activity.id %>">
-                    <% if activity.max_capacity.nil? || activity.bookings.size < activity.max_capacity %>
-                    <%= link_to "Register", activity_bookings_path(activity.id), method: :post, remote: true, class: 'btn register-btn' %>
-                    <% else %>
-                    <%= link_to "Class full", request.referrer, remote: true, class: 'btn register-btn full-capacity-btn' %>
-                    <% end %>
-                  </div>
-                </div>
-        </div>
-      <% end %>
+      </div>
+    <% end %>
   </div>
 
   <div class="map-container" style="position: sticky; top: 50px;">
     <div
-    id="map"
-    data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-    class="map"
-  >
+      id="map"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      class="map"
+    >
+    </div>
   </div>
-  </div>
-
 
 </div>
 
