--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -11,7 +11,7 @@
         <%= render 'shared/avatar_dropdown' %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "My dashboard", dashboard_path, class: "dropdown-item" %>
-          <%= link_to "My organized events", dashboard_owner_path, class: "dropdown-item" %>
+          <%= link_to "My organized events", owner_dashboard_path(current_user), class: "dropdown-item" %>
           <%= link_to "My profile", profile_path, class: "dropdown-item" %>
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
