fixed index page

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -5,7 +5,6 @@
   <div class="cards-index">
     <% @activities.each do |activity| %>
 
-
       <div class="card-index zoom d-flex <%= (activity.max_capacity.nil?) || (activity.bookings.size < activity.max_capacity) ? 'available-capacity' : 'full-capacity'%>">
         <div class="card-index-img">
           <%= render 'shared/activity_photo', activity: activity %>
@@ -25,30 +24,27 @@
         <div class="card-index-tags">
 
           <div class="interest-index" data-activity-id="<%= activity.id %>" >
-            <% if !current_user.professional %>
-              <% if activity.owner != current_user %>
-                <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
-                  <%= link_to "♡", activity_interest_path(activity), method: :post, remote: true, class: "interest-btn" %>
-                <% else %>
-                  <%= link_to "♥", activity_interest_path(activity), method: :delete, remote: true, class: "interest-btn-selected" %>
-                <% end %>
+            <% if activity.owner != current_user %>
+              <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
+                <%= link_to "♡", activity_interest_path(activity), method: :post, remote: true, class: "interest-btn" %>
+              <% else %>
+                <%= link_to "♥", activity_interest_path(activity), method: :delete, remote: true, class: "interest-btn-selected" %>
               <% end %>
-            <%end %>
+            <% end %>
           </div>
           <br>
           <div class="card-btn-index" data-bookings-id="<%= activity.id %>">
-            <% if !current_user.professional %>
-              <% if activity.owner != current_user %>
-                <% booking = @user_registrations.select{ |booking| booking.activity == activity } %>
-                <% if booking == [] %>
-                  <%= link_to "Register", activity_bookings_path(activity), method: :post, remote: true, class: "btn register-btn" %>
-                <% else %>
-                  <%= link_to "Unregister", activity_booking_path(activity.id, booking.flatten), method: :delete, remote: true, class: "btn register-btn-selected" %>
-                <% end %>
+            <% if activity.owner != current_user %>
+              <% booking = @user_registrations.select{ |booking| booking.activity == activity } %>
+              <% if booking == [] %>
+                <%= link_to "Register", activity_bookings_path(activity), method: :post, remote: true, class: "btn register-btn" %>
+              <% else %>
+                <%= link_to "Unregister", activity_booking_path(activity.id, booking.flatten), method: :delete, remote: true, class: "btn register-btn-selected" %>
               <% end %>
             <% end %>
           </div>
         </div>
+      </div>
     <% end %>
   </div>
 
