made some changes

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -89,6 +89,7 @@
   color: $dark-gray;
   width: 100px;
   border-radius: 10px;
+  margin-bottom: 10px;
   filter: brightness(95%);
   text-decoration: none;
 }
