--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -95,6 +95,12 @@
   top: 50px;
 }
 
+.registered {
+  color: $green;
+  font-size: 8px;
+  font-style: italic;
+}
+
 // DASHBOARD
 
 .card-dashboard {
