--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -7,7 +7,9 @@
   <hr size="6" width="100%" align="left" color="#C8C8C8">
   <p>Event organized by <i><%= link_to @activity.owner.username, owner_dashboard_path(@activity.owner), style: "text-decoration: none; color: #FA9800" %></i></p>
   <div class="show-tags d-flex justify-content-between">
-      <p><i class="far fa-clock" style="margin-right: 1vh;"></i><%= @activity.duration %> Minutes</p>
+      <p><i class="far fa-clock" style="margin-right: 1vh;"></i>
+        <%= @activity.time.strftime("%b %e, %l:%M %p") %> (<%= @activity.duration %> minutes)
+      </p>
       <div class="d-flex justify-content-start">
         <% @activity.owner.average_owner_rating.times.each do |rate| %>
           <i class="fas fa-star" style="color:#FA9800;"></i>
@@ -34,7 +36,7 @@
             <% elsif @activity.bookings.size < @activity.max_capacity %>
               <p>Hurry up, there are only <%= @activity.max_capacity - @activity.bookings.size %> spots left!</p>
             <% else @activity.max_capacity = @activity.bookings.size %>
-              <p>Sorry the class is fully booked <% %></p>
+              <p>Sorry the class is fully booked...😢 </p>
             <% end%>
         </div>
         <hr size="6" width="100%" align="left" color="#C8C8C8">
