new banner photo

--- a/app/assets/stylesheets/devise/_form.scss
+++ b/app/assets/stylesheets/devise/_form.scss
@@ -6,7 +6,7 @@
 }
 
 .devise-background {
-  background-image: linear-gradient( rgba(0,0,0,0.1),rgba(0,0,0,0.1) ),asset-url('sports_mosaic.jpg')
+  background-image: linear-gradient( rgba(0,0,0,0.1),rgba(0,0,0,0.1) ),asset-url('old-sports-mosaic.png')
 }
 
 .form-inputs {
