edited format mailers

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -155,6 +155,12 @@
   object-fit: cover;
 }
 
+// Confirmation emails
+
+.confirmation {
+  width: 50px;
+}
+
 // Capacity classes
 
 .full-capacity {
