--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,28 @@
-<h1>User#welcome</h1>
+<style>
+  body {
+    font-family: 'Lato', sans-serif;
+    background-color: white;
+    color: #636363;
+  }
+</style>
 
-<p> Hi <%= @user.username %>
-  and welcome to Coolfit.
-</p>
+<div class= "welcome-container">
+  <h1> Hi <%= @user.username %> and welcome to <strong style= "font-family: 'Exo 2', sans-serif; color: #FA9800; font-size: 34px;">Coolfit</strong></h1>
+
+<%= link_to "Look at activities around you!", activities_url, style: "text-decoration: none; font-size: 25px;" %>
+<ul style="list-style: none; padding: 0; margin: 0;">
+    <hr size="1" width="60%" align="left" color="#C8C8C8">
+
+  <li><strong>Current Physical Activity: </strong><%= @user.physical_activity %></li>
+  <br>
+  <li><strong>Desription: </strong><%= @user.description %></li>
+</ul>
+    <hr size="1" width="60%" align="left" color="#C8C8C8">
+
+<%= link_to "Edit your profile", profile_edit_url, style: "text-decoration: none; font-size: 18px;" %>
+<br>
+<br>
+<%= image_tag "sports_mosaic.jpg", style: "width: 60%; "%>
+
+
+</div>
