--- a/app/views/pages/thankyou.html.erb
+++ b/app/views/pages/thankyou.html.erb
@@ -1,24 +1,50 @@
 <div class="container">
-  <h1>Thank You for Signing up to CoolFit</h1>
-    <p>In order to be able to give you a fitting recommendation and track your progress we would ask you to fill out this short "current activity status" Form </p>
-    <p>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-    Activity Status
-  </button>
-</p>
-  <div class="collapse" id="collapseExample">
-    <div class="card card-form">
-      <%= simple_form_for :anything do |f| %>
-      <h2>Activtiy Status Questionnaire</h2>
-      <p>This Questionnaire is based on the International Physical Activity Questionnaire (IPAQ) to help us better understand your current physical activity level in order to be able to give you a customized recommendation</p>
-      <p> Part one:</p>
-      <p>TRANSPORTATION PHYSICAL ACTIVITY - These questions are about how you traveled from place to place, including to places like work, stores, movies, and so on.</p>
-      <div class="form-inputs">
+  <h1>Thank You for Signing up to <span class="banner-logo"> Coolfit</span></h1>
+  <h4>In order to be able to give you a fitting recommendation and track your progress we would ask you to give us information on your current Physical Activity Status in the Form Below Or Start <%=  link_to "Browsing", activities_path, style:"text-decoration: none; color: #FA9800;"%></h4>
+  <div class="arrow bounce">
+  <a class="fa fa-arrow-down fa-2x" href="#"></a>
+</div>
+
+
+
+
+    <div class="card card-form-thanks">
+      <%= form_for :anything do |f| %>
+
+        <h2>Activtiy Status Questionnaire</h2>
+          <p>This Questionnaire is based on the International Physical Activity Questionnaire (IPAQ) to help us better understand your current physical activity level in order to be able to give you a customized recommendation. These Questions will try and assess all the physical activities that you did in the last 7 days solely for recreation, sport, exercise or leisure.</p>
+          <p>Think about all the vigorous and moderate activities that you did in the last 7 days. Vigorous physical activities refer to activities that take hard physical effort and make you breathe much harder than normal. Moderate activities refer to activities that take moderate physical effort and make you breathe somewhat harder than normal.</p>
+      <div class="form-inputs-thanks">
         <ol>
-          <%= f.input :question, label: "During the last 7 days, on how many days did you travel in a motor vehicle like a train, bus, car, or tram?" %>
+
+            <%= f.label "1. During the last 7 days, on how many days did you walk for at least 10 minutes at a time in your leisure time?" %>
+            <input type="text" name="somename" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
         </ol>
+        <br>
+        <ol>
+            <%= f.label "2. During the last 7 days, on how many days did you do vigorous physical activities like aerobics, running, fast bicycling, or fast swimming in your leisure time?" %>
+            <input type="text" name="somename" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+        </ol>
+        <br>
+        <ol>
+          <%= f.label "3. How much time did you usually spend on one of those days doing vigorous physical activities in your leisure time?" %>
+            <input type="text" name="somename" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["<30min", "30 min", "30-60min", "1 hour", "1-2 hours", "2-3 hours", "3-4 hours"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+        </ol>
+        <br>
+        <ol>
+          <%= f.label "4. During the last 7 days, on how many days did you do moderate physical activities like bicycling at a regular pace, swimming at a regular pace, and doubles tennis in your leisure time?" %>
+          <input type="text" name="somename" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+        </ol>
+        <br>
+        <ol>
+          <%= f.label "5.How much time did you usually spend on one of those days doing moderate physical activities in your leisure time?" %>
+          <input type="text" name="somename" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["<30min", "30 min", "30-60min", "1 hour", "1-2 hours", "2-3 hours", "3-4 hours"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+        </ol>
+        <br>
+        <div class="form-actions-question">
+          <%= link_to "Submit", root_path, class: "btn btn-question-user", style: "width: 145px; margin-left: 55vh; margin-right: auto; display: block !important;"  %>
+        </div>
       <% end %>
       </div>
     </div>
-  </div>
 </div>
