done, starting recommender

--- a/app/views/pages/thankyou.html.erb
+++ b/app/views/pages/thankyou.html.erb
@@ -9,7 +9,7 @@
 
 
     <div class="card card-form-thanks">
-      <%= form_for :anything do |f| %>
+      <%= form_for Recommender.new do |f| %>
 
         <h2>Activtiy Status Questionnaire</h2>
           <p>This Questionnaire is based on the International Physical Activity Questionnaire (IPAQ) to help us better understand your current physical activity level in order to be able to give you a customized recommendation. These Questions will try and assess all the physical activities that you did in the last 7 days solely for recreation, sport, exercise or leisure.</p>
