map markers and home front-end

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,6 +2,8 @@
 .home-title {
   color: $orange;
   font-family: 'Exo 2', sans-serif;
+  text-align:center;
+  font-size: 40px;
 }
 
 .scroll-container {
