--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -136,9 +136,11 @@
 }
 
 .category-logo {
-  height: 50px;
-  width: 50px;
+  height: 35px;
+  width: 35px;
   margin-right: 10px;
+  margin-bottom: 0;
+  opacity: 0.6;
 }
 
 
