--- a/app/views/pages/thankyou.html.erb
+++ b/app/views/pages/thankyou.html.erb
@@ -9,7 +9,7 @@
   <div class="collapse" id="collapseExample">
     <div class="card card-form">
       <%= simple_form_for :anything do |f| %>
-      <h2>Activtiy Status Questionnaire</h2>
+      <h2>Activity Status Questionnaire</h2>
       <p>This Questionnaire is based on the International Physical Activity Questionnaire (IPAQ) to help us better understand your current physical activity level in order to be able to give you a customized recommendation</p>
       <p> Part one:</p>
       <p>TRANSPORTATION PHYSICAL ACTIVITY - These questions are about how you traveled from place to place, including to places like work, stores, movies, and so on.</p>
