--- a/app/views/user_mailer/welcome_pro.html.erb
+++ b/app/views/user_mailer/welcome_pro.html.erb
@@ -27,7 +27,7 @@
 <br>
 <br>
 
-<%= image_tag "sports_mosaic.jpg", style: "width: 60%; "%>
+<%= cl_image_tag ('Coolfit/old-sports-mosaic_hwhc6n.png'), style: "width: 60%; "%>
 
 
 </div>
