--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -22,7 +22,7 @@
 <%= link_to "Edit your profile", profile_edit_url, style: "text-decoration: none; font-size: 18px;" %>
 <br>
 <br>
-<%= image_tag "sports_mosaic.jpg", style: "width: 60%; "%>
+<%#= image_tag "sports_mosaic.jpg", style: "width: 60%; "%>
 
 
 </div>
