--- a/app/views/user_mailer/welcome_pro.html.erb
+++ b/app/views/user_mailer/welcome_pro.html.erb
@@ -27,7 +27,7 @@
 <br>
 <br>
 
-<%= image_tag "sports_mosaic.jpg", style: "width: 60%; "%>
+<%#= image_tag "sports_mosaic.jpg", style: "width: 60%; "%>
 
 
 </div>
