--- a/app/views/bookings/_past_bookings.html.erb
+++ b/app/views/bookings/_past_bookings.html.erb
@@ -1,5 +1,5 @@
 <!-- <div class="card-dashboard"> -->
-<div class="card-dashboard zoom d-flex">
+<div class="card-dashboard d-flex">
 
   <%= render 'shared/card_index', activity: booking.activity %>
 
