--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,7 +3,7 @@
   background-color: $orange;
   color: white;
   border-radius: 10px;
-  margin: 10px;
+  margin-top: 10px;
 }
 
 .btn-search:hover {
@@ -12,11 +12,12 @@
 
 .btn-search-navbar {
   font-size: 16px;
+  height: 5vh;
   background-color: $orange;
   color: white;
-  border-radius: 10px;
+  border-radius: 20px;
   margin-left: 10px;
-  margin-bottom: 10px;
+  margin-top: 5px;
   filter: brightness(95%);
 }
 
@@ -26,8 +27,8 @@
 
 .admin-btn {
   font-size: 14px;
-  background-color: $gray;
-  color: white;
+  background-color: white;
+  color: $gray;
   width: 100px;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -43,7 +44,7 @@
 }
 
 .sign-in-btn {
-  font-size: 18px;
+  font-size: 16px;
   color: $background-gray;
 }
 
