--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -96,21 +96,22 @@
 }
 
 .registered {
-  color: $green;
-  font-size: 8px;
+  font-size:10px !important;
   font-style: italic;
+  color: $green;
 }
 
 // DASHBOARD
 
 .card-dashboard {
   display: flex;
-  width: 120vh;
+  width: 100vh;
+  height: 15vh;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 2px;
   margin-right: 10px;
 }
 
@@ -119,7 +120,41 @@
   object-fit: cover;
 }
 
+.card-dashboard-infos {
+  padding: 2px;
+  margin-left: 10px;
+  width: 500px;
 
+  h3 {
+    font-size: 18px;
+    color: $gray;
+    margin-block-end: 5px;
+  }
+
+   p {
+    font-size: 12px;
+    margin-block-end: 5px;
+  }
+}
+
+.card-dashboard-title {
+  margin-top: 10px !important;
+}
+
+.card-dashboard-title a {
+  text-decoration: none;
+  color: $gray;
+}
+
+.card-dashboard-title a:hover {
+  text-decoration: none;
+  color: $orange;
+}
+
+.card-dashboard-benef {
+  color: $orange;
+  font-size: 16px;
+}
 
 .card-btns {
   display: flex;
