--- a/app/views/bookings/_future_bookings.html.erb
+++ b/app/views/bookings/_future_bookings.html.erb
@@ -1,4 +1,4 @@
-<div class="card-dashboard zoom d-flex" data-future-bookings-id="<%= activity.id %>">
+<div class="card-dashboard d-flex justify-content-between" data-future-bookings-id="<%= activity.id %>">
   <%= render 'shared/card_index', activity: activity %>
 
   <div class="card-btns">
