--- a/app/views/shared/_avatar_dropdown.html.erb
+++ b/app/views/shared/_avatar_dropdown.html.erb
@@ -1,5 +1,9 @@
 <% if current_user.avatarseed.nil? %>
-  <%= image_tag current_user.avatar_url, class: "avatar-medium dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+  <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <%= image_tag current_user.avatar_url, class: "avatar-medium dropdown-toggle", id: "navbarDropdown" %>
+  </a>
 <% else %>
-  <%= cl_image_tag current_user.avatarseed, class: "avatar-medium dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+  <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <%= cl_image_tag current_user.avatarseed, class: "avatar-medium dropdown-toggle", id: "navbarDropdown" %>
+  </a>
 <% end %>
