--- a/app/views/shared/_card_index.html.erb
+++ b/app/views/shared/_card_index.html.erb
@@ -1,14 +1,12 @@
 <div class="card-dashboard-img">
   <%= render 'shared/activity_photo', activity: activity %>
 </div>
-<div class="card-index-infos">
-  <div class="card-dashboard-text">
-    <h3 class="card-index-title"><%= link_to activity.name, activity_path(activity) %></h3>
+<div class="card-dashboard-infos">
+    <h3 class="card-dashboard-title"><strong><%= link_to activity.name, activity_path(activity) %></strong></h3>
     <p class="avatar-name-dashboard" style="font-size: 16px;">
         <%= render 'shared/avatar_small', activity: activity, img_html: {style:"margin-bottom: 5vh;"} %><%= activity.owner.username %>
     </p>
-    <p class="card-index-benef" style="margin-top: 3vh;font-size: 16px;"><%=activity.healths.map(&:description).join(' / ') %></p>
-  </div>
+    <p class="card-dashboard-benef"><%=activity.healths.map(&:description).join(' / ') %></p>
 </div>
 
 
