--- a/app/views/health/_cardiovascular.html.erb
+++ b/app/views/health/_cardiovascular.html.erb
@@ -1,36 +1,46 @@
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
+ <!--      <div class="popup-container">
+        <div class="content"> -->
+      <div class="bg-image"></div>
+
+        <div class="bg-text" style= "list-style:none;">
       <%#= render '../health/cardiovascular' %>
-      <h3>What are major Cardiovascular risk factors?</h3>
+        <h3>Major Cardiovascular risk factors</h3>
+        <br>
 
-      <ul>
-        <li>High blood pressure</li>
-        <li>Abnormal values for blood lipids</li>
-        <li>Obesity</li>
-        <li>Others: Smoking, sedentary lifestyle, etc...</li>
-      </ul>
+        <ul>
+          <li>High blood pressure</li>
+          <li>Abnormal values for blood lipids</li>
+          <li>Obesity</li>
+        </ul>
 
+        <hr size="1" width="100%" align="left" color="#C8C8C8">
 
-    <h3>How can they be best treated through sport?</h3>
+      <h3>Benefits of activity</h3>
+      <br>
 
-      <ul>
-        <li>Dilate blood vessels, enabling blood to circulate more freely</li>
-        <li>Lower cholesterol</li>
-        <li>Weight reduction</li>
-        <li>Favors control of glucose levels</li>
-        <li>Reduces hypertension</li>
-      </ul>
+        <ul>
+          <li>Dilates blood vessels</li>
+          <li>Lowers cholesterol</li>
+          <li>Weight reduction</li>
+          <li>Favors control of glucose levels</li>
+          <li>Reduces hypertension</li>
+        </ul>
 
+        <hr size="1" width="100%" align="left" color="#C8C8C8">
 
-    <h3>Find out more about other activities helping with this:</h3>
+      <h3>Other activites providing similar benefits</h3>
+      <br>
 
-      <ul>
-        <li>Running, Jogging</li>
-        <li>Swimming</li>
-        <li>Tennis</li>
-        <li>Aerobics</li>
-      </ul>
+        <ul>
+          <li>Running, Jogging</li>
+          <li>Swimming</li>
+          <li>Tennis</li>
+          <li>Aerobics</li>
+        </ul>
+        </div>
     </div>
   </div>
 </div>
