recommendations on dashboard working and change some style on dashboard

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -166,6 +166,7 @@
   text-decoration: none;
   margin-top: 10px;
   filter: brightness(97%);
+  text-align: center;
 }
 
 .btn-question-user:hover {
