--- a/app/views/pages/thankyou.html.erb
+++ b/app/views/pages/thankyou.html.erb
@@ -4,44 +4,65 @@
   <div class="arrow bounce">
   <a class="fa fa-arrow-down fa-2x" href="#"></a>
 </div>
-    <div class="card card-form-thanks">
-      <%= form_for(Recommender.new, url: recomendation_path) do |f| %>
 
-        <h2>Activity Status Questionnaire</h2>
-          <p>This Questionnaire is based on the International Physical Activity Questionnaire (IPAQ) to help us better understand your current physical activity level in order to be able to give you a customized recommendation. These Questions will try and assess all the physical activities that you did in the last 7 days solely for recreation, sport, exercise or leisure.</p>
-          <p>Think about all the vigorous and moderate activities that you did in the last 7 days. Vigorous physical activities refer to activities that take hard physical effort and make you breathe much harder than normal. Moderate activities refer to activities that take moderate physical effort and make you breathe somewhat harder than normal.</p>
-      <div class="form-inputs-thanks">
-        <ol>
+<div class="card card-form-thanks">
+  <%= form_for(Recommender.new, url: recomendation_path) do |f| %>
+    <h2>Activity Status Questionnaire</h2>
 
-            <%= f.label "1. During the last 7 days, on how many days did you walk for at least 10 minutes at a time in your leisure time?" %>
-            <input type="text" name="walking" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
-        </ol>
-        <br>
-        <ol>
-            <%= f.label "2. During the last 7 days, on how many days did you do vigorous physical activities like aerobics, running, fast bicycling, or fast swimming in your leisure time?" %>
-            <input type="text" name="vigorous_days" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
-        </ol>
-        <br>
-        <ol>
-          <%= f.label "3. How much time did you usually spend on one of those days doing vigorous physical activities in your leisure time?" %>
-            <input type="text" name="vigorous_hours" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["<30min", "30 min", "30-60min", "1 hour", "1-2 hours", "2-3 hours", "3-4 hours"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
-        </ol>
-        <br>
-        <ol>
-          <%= f.label "4. During the last 7 days, on how many days did you do moderate physical activities like bicycling at a regular pace, swimming at a regular pace, and doubles tennis in your leisure time?" %>
-          <input type="text" name="moderate_days" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
-        </ol>
-        <br>
-        <ol>
-          <%= f.label "5.How much time did you usually spend on one of those days doing moderate physical activities in your leisure time?" %>
-          <input type="text" name="moderate_hours" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["<30min", "30 min", "30-60min", "1 hour", "1-2 hours", "2-3 hours", "3-4 hours"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
-        </ol>
-        <br>
-        <div class="form-actions-question">
-          <%= submit_tag "Submit", class: "btn-question-user" %>
-          <%#= link_to "Submit", root_path, class: "btn btn-question-user", style: "width: 145px; margin-left: 55vh; margin-right: auto; display: block !important;"  %>
-        </div>
-      <% end %>
-      </div>
+    <p>This Questionnaire is based on the International Physical Activity Questionnaire (IPAQ) to help us better understand your current physical activity level in order to be able to give you a customized recommendation. These Questions will try and assess all the physical activities that you did in the last 7 days solely for recreation, sport, exercise or leisure.</p>
+
+    <p>Think about all the vigorous and moderate activities that you did in the last 7 days. Vigorous physical activities refer to activities that take hard physical effort and make you breathe much harder than normal. Moderate activities refer to activities that take moderate physical effort and make you breathe somewhat harder than normal.</p>
+
+    <div class="form-inputs-thanks">
+      <ol>
+        <%= f.label "1. During the last 7 days, on how many days did you walk for at least 10 minutes at a time in your leisure time?" %>
+        <input type="text" name="walking" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+      </ol>
+      <ol>
+        <%= f.label "2. During the last 7 days, on how many days did you do vigorous physical activities like aerobics, running, fast bicycling, or fast swimming in your leisure time?" %>
+        <input type="text" name="vigorous_days" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+      </ol>
+      <ol>
+        <%= f.label "3. How much time did you usually spend on one of those days doing vigorous physical activities in your leisure time?" %>
+          <input type="text" name="vigorous_hours" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["<30min", "30 min", "30-60min", "1 hour", "1-2 hours", "2-3 hours", "3-4 hours"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+      </ol>
+
+      <ol>
+        <%= f.label "4. During the last 7 days, on how many days did you do moderate physical activities like bicycling at a regular pace, swimming at a regular pace, and doubles tennis in your leisure time?" %>
+        <input type="text" name="moderate_days" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["1", "2", "3", "4", "5", "6", "7"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+      </ol>
+      <ol>
+        <%= f.label "5.How much time did you usually spend on one of those days doing moderate physical activities in your leisure time?" %>
+        <input type="text" name="moderate_hours" data-provide="slider" data-slider-ticks="[1, 2, 3, 4, 5, 6, 7]" data-slider-ticks-labels='["<30min", "30 min", "30-60min", "1 hour", "1-2 hours", "2-3 hours", "3-4 hours"]' data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="10" data-slider-tooltip="show" class="slider" />
+      </ol>
     </div>
+
+    <fieldset class="form-group-thanks" >
+      <legend class="col-form-label pt-0" >Which Health Benefits would you like to target?</legend>
+      <div class="custom-control custom-checkbox custom-control-inline">
+        <input class="custom-control-input" type="checkbox" id="exampleInlineCheckbox1" name="cognitive" value="option1">
+        <label class="custom-control-label" for="exampleInlineCheckbox1">Cognitive improvement </label>
+      </div>
+      <div class="custom-control custom-checkbox custom-control-inline">
+        <input class="custom-control-input" type="checkbox" id="exampleInlineCheckbox2" name="cardiovascular" value="option2">
+        <label class="custom-control-label" for="exampleInlineCheckbox2">Cardiovascular health</label>
+      </div>
+      <div class="custom-control custom-checkbox custom-control-inline">
+        <input class="custom-control-input" type="checkbox" id="exampleInlineCheckbox3" name="stress" value="option3">
+        <label class="custom-control-label" for="exampleInlineCheckbox3">Stress relief</label>
+      </div>
+      <div class="custom-control custom-checkbox custom-control-inline">
+        <input class="custom-control-input" type="checkbox" id="exampleInlineCheckbox4" name="energy" value="option4">
+        <label class="custom-control-label" for="exampleInlineCheckbox4">Energy boost</label>
+      </div>
+      <div class="custom-control custom-checkbox custom-control-inline">
+        <input class="custom-control-input" type="checkbox" id="exampleInlineCheckbox5" name="aphrodisiac" value="option5">
+        <label class="custom-control-label" for="exampleInlineCheckbox5">Aphrodisiac</label>
+      </div>
+    </fieldset>
+
+    <div class="form-actions-question" style="text-align: center;">
+      <%= submit_tag "Submit", class: "btn-question-user" %>
+    </div>
+  <% end %>
 </div>
