--- a/app/views/pages/dashboard_owner.html.erb
+++ b/app/views/pages/dashboard_owner.html.erb
@@ -9,29 +9,34 @@
 
 <br>
 
-<h5>Description: <%= @user.description %></h5>
+<h5><strong>Description:</strong> <%= @user.description %></h5>
+<br>
 
 <%#= binding.pry %>
 
-<h5>Physical activity level:
+<h5><strong>Physical activity level:</strong>
   <% if current_user.physical_activity.nil? %>
     <em style="filter: brightness(150%);">no specialty yet</em>
   <% else %>
     <%= current_user.physical_activity.capitalize %> exercises
   <% end %>
 </h5>
+<br>
 
-<h5>Average rating:
+<h5><strong>Average rating:</strong>
   <% if @user.average_owner_rating.zero? %>
     <em style="filter: brightness(150%);">no rating yet</em>
   <% else %>
-  <% @user.average_owner_rating.times do %>
-    <i class="fas fa-star"></i>
-  <% end %>
+    <div class="d-flex justify-content-start">
+      <% @user.average_owner_rating.times.each do |rate| %>
+        <i class="fas fa-star" style="color:#FA9800;"></i>
+        <% end %>
+        <% @user.star_to_5.times.each do |rate| %>
+        <i class="fas fa-star" style="color:#C8C8C8;"></i>
+        <% end %>
+    </div>
   <% end %>
 </h5>
-
-<br>
 
 <% if current_user == @user %>
   <h5>Create your own events and bring people together around your favorite activities! <%= link_to "Create", new_activity_path, class:"btn admin-btn", style:"font-size: 20px"%></h5>
@@ -40,7 +45,9 @@
 
 <% if !@future_activities.empty? %>
   <div>
-    <h3> upcoming events</h3>
+    <hr size="6" width="100%" align="left" color="#C8C8C8">
+    <h3> Upcoming events</h3>
+    <br>
 
     <div class="future-activities">
       <% @future_activities.each do |activity| %>
