--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -4,6 +4,8 @@
   border-radius: 50%;
   border: 1px solid $background-gray;
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .avatar-medium {
@@ -12,6 +14,8 @@
   border-radius: 50%;
   border: 1px solid $background-gray;
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .avatar-large {
@@ -20,4 +24,6 @@
   border-radius: 50%;
   border: 2px solid $background-gray;
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+  object-fit: cover;
+  object-position: 50% 50%;
 }
