--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -71,6 +71,7 @@
     }
 }
 
+
 .avatar-name a {
   color: $gray;
 }
@@ -99,6 +100,23 @@
   font-size:10px !important;
   font-style: italic;
   color: $green;
+}
+
+.empty-search-img {
+  flex-direction: column;
+  text-align: center;
+  margin: auto;
+}
+
+.empty-search-img img {
+  height: 400px;
+  width: 500px;
+  border-radius: 5%;
+}
+
+.empty-search-img h3{
+  margin-top: 50px;
+  font-style: italic;
 }
 
 // DASHBOARD
