--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -10,7 +10,7 @@
 <hr size="6" width="100%" align="left" color="#C8C8C8">
 
 <div>
-  <h3>My upcoming events<a data-toggle="collapse" href="#future_bookings" role="button" aria-expanded="false" aria-controls="future_bookings"><i class="fas fa-plus-circle dashboard-plus"></i>
+  <h3 class="d-flex justify-content-between">My upcoming events<a data-toggle="collapse" href="#future_bookings" role="button" aria-expanded="false" aria-controls="future_bookings"><i class="fas fa-plus-circle dashboard-plus"></i>
   </a></h3>
   <div class="collapse" id="future_bookings">
     <div class="future-bookings">
@@ -19,13 +19,13 @@
       <% end %>
     </div>
   </div>
-
 </div>
-
+<br>
+<hr size="6" width="100%" align="left" color="#C8C8C8">
 <br>
 
 <div>
-  <h3>My <i class="fa fa-heart"></i> events<a data-toggle="collapse" href="#interests" role="button" aria-expanded="false" aria-controls="interests"><i class="fas fa-plus-circle dashboard-plus"></i>
+  <h3 class="d-flex justify-content-between">My wishlist<a data-toggle="collapse" href="#interests" role="button" aria-expanded="false" aria-controls="interests"><i class="fas fa-plus-circle dashboard-plus"></i>
   </a></h3>
   <div class="collapse" id="interests">
     <div class="interests" id="interests">
@@ -36,9 +36,11 @@
   </div>
 </div>
 <br>
+<hr size="6" width="100%" align="left" color="#C8C8C8">
+<br>
 
 <div>
-  <h3>Past events<a data-toggle="collapse" href="#past-bookings" role="button" aria-expanded="false" aria-controls="past-bookings"><i class="fas fa-plus-circle dashboard-plus"></i>
+  <h3 class="d-flex justify-content-between">Past events<a data-toggle="collapse" href="#past-bookings" role="button" aria-expanded="false" aria-controls="past-bookings"><i class="fas fa-plus-circle dashboard-plus"></i>
   </a></h3>
   <div class="collapse" id="past-bookings">
     <div class="past-bookings" style="display:none;" id="past_bookings">
@@ -47,6 +49,8 @@
       <% end %>
     </div>
   </div>
+  <br>
+  <hr size="6" width="100%" align="left" color="#C8C8C8">
 </div>
 </div>
 </div>
